<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/img_fondo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Botón atrás -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/image_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/arrow_left"
                android:background="@android:color/transparent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- Formulario -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- Nombre -->
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nombre"
                android:textColor="@color/blanco"
                android:textSize="14sp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="42dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/Nombre2"
                android:inputType="textCapWords"
                android:padding="18dp"
                android:textColorHint="@color/gris"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Correo -->
            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Correo1"
                android:textColor="@color/blanco"
                android:textSize="14sp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/editTextNombre"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextCorreo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/Correo2"
                android:inputType="textEmailAddress"
                android:padding="18dp"
                android:textColorHint="@color/gris"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/textView15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Contraseña -->
            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contrasena1"
                android:textColor="@color/blanco"
                android:textSize="14sp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/editTextCorreo"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextContrasena"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:background="@drawable/rounded_corner"
                android:drawableEnd="@drawable/eye_off"
                android:hint="@string/Contrasena2"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColorHint="@color/gris"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView16" />

            <!-- Confirmar contraseña -->
            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ConfirmarContrasena"
                android:textColor="@color/blanco"
                android:textSize="14sp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextContrasena" />

            <EditText
                android:id="@+id/editTextConfirmarContrasena"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:background="@drawable/rounded_corner"
                android:drawableEnd="@drawable/eye_off"
                android:hint="@string/ConfirmarContrasena2"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColorHint="@color/gris"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/textView17"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Botón continuar -->
            <Button
                android:id="@+id/botonContinuar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Continuar"
                android:layout_marginTop="42dp"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"
                android:backgroundTint="@color/verde"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/editTextConfirmarContrasena"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Iniciar sesión -->
            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginBottom="42dp"
                android:text="¡Ya tienes una cuenta!"
                android:textColor="@color/blanco"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="42dp"
                android:text="Iniciar sesión"
                android:textColor="@color/verde"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/textView18" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


